# web-rust

./: .gitignore  compose.yml
backend/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
