[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["console"] }
yew = { version = "0.21.0", features = ["csr"] }
